DataImport課題/force-app/main/default/objects/TESTA__c/fields/AccompanyingTansferFeeLessThan__c.field-meta.xml
<CustomField>
    <fullName>AccompanyingTansferFeeLessThan__c</fullName>
    <label>同行振込手数料（税抜）※振込金額区分未満</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>