DataImport課題/force-app/main/default/objects/TESTA__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>銀行コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>