DataImport課題/force-app/main/default/objects/TESTA__c/fields/BankNameAndBranchName__c.field-meta.xml
<CustomField>
    <fullName>BankNameAndBranchName__c</fullName>
    <formula>BankName__c &amp; &quot;／&quot; &amp; BranchName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>銀行名／支店名</label>
    <type>Text</type>
</CustomField>