DataImport課題/force-app/main/default/objects/TESTA__c/fields/BankNameKana__c.field-meta.xml
<CustomField>
    <fullName>BankNameKana__c</fullName>
    <label>銀行名（ｶﾅ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>