DataImport課題/force-app/main/default/objects/TESTA__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>支店コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>