DataImport課題/force-app/main/default/objects/TESTA__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <label>支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>