DataImport課題/force-app/main/default/objects/TESTA__c/fields/BranchNameKana__c.field-meta.xml
<CustomField>
    <fullName>BranchNameKana__c</fullName>
    <label>支店名（ｶﾅ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>