DataImport課題/force-app/main/default/objects/TESTA__c/fields/ForInHouseManagement__c.field-meta.xml
<CustomField>
    <fullName>ForInHouseManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自社管理用</label>
    <type>Checkbox</type>
</CustomField>