DataImport課題/force-app/main/default/objects/TESTA__c/fields/OtherBankTransferFeeThatsAll__c.field-meta.xml
<CustomField>
    <fullName>OtherBankTransferFeeThatsAll__c</fullName>
    <label>他行振込手数料（税抜）※振込金額区分以上</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>