DataImport課題/force-app/main/default/objects/TESTA__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>振込手数料税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>