DataImport課題/force-app/main/default/objects/TESTA__c/fields/TransferAmountClassification__c.field-meta.xml
<CustomField>
    <fullName>TransferAmountClassification__c</fullName>
    <label>振込金額区分</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>